--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Satoshi:wght@400;500;600&display=swap"
+    rel="stylesheet"
+  />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="stylesheet" type="text/css" href="https://fonts.cdnfonts.com/css/satoshi">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script crossorigin src="..."></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
